<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.pmu.add_event_pmu.pmu_other_member.PmuAddEditOtherMemActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_bg"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/add_edit_f_name"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/mNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/add_edit_m_name"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/lNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/add_edit_l_name"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/mobEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:digits="0123456789"
            android:hint="@string/add_edit_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="2dp"
                android:text="@string/add_edit_gender"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_20" />

            <RadioGroup
                android:id="@+id/genderRGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <RadioButton
                    android:id="@+id/maleRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_edit_male"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text_12" />

                <RadioButton
                    android:id="@+id/femaleRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_edit_female"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text_12" />

                <RadioButton
                    android:id="@+id/tranRButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_edit_transgender"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text_12" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/add_edit_register"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_15" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>