<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.coordinator.add_edit_other_member.AddEditOtherMemberActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_bg"
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/add_edit_f_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/mNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/add_edit_m_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/lNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/add_edit_l_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/mobEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:digits="0123456789"
                android:hint="Mobile Number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="2dp"
                    android:text="@string/add_edit_gender"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text_20" />

                <RadioGroup
                    android:id="@+id/genderRGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <RadioButton
                        android:id="@+id/maleRButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_edit_male"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_12" />

                    <RadioButton
                        android:id="@+id/femaleRButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_edit_female"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_12" />

                    <RadioButton
                        android:id="@+id/tranRButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_edit_transgender"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_12" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/catLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/parti_list_border_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/socCatTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/add_edit_social_category"
                    android:textColor="@color/text_blue" />


                <ImageView
                    android:id="@+id/socCatImageView"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="14dp"
                    android:src="@mipmap/ic_arrow"
                    app:tint="@color/bg_blue" />

            </LinearLayout>

            <EditText
                android:id="@+id/desigEText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="text"
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:maxLength="20"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:singleLine="true"
                android:hint="@string/add_edit_designation"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--<LinearLayout
                android:id="@+id/desigLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/parti_list_border_bg"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/desigTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/add_edit_designation"
                    android:textColor="@color/text_blue" />


                <ImageView
                    android:id="@+id/desigImageView"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="14dp"
                     android:src="@drawable/down_arrow" />

            </LinearLayout>-->

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:text="@string/add_edit_register"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_15" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>