<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.common.forgot_password.ResetPasswordActivity">

    <LinearLayout
        android:id="@+id/rRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/newPassEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/reset_new_password"
            android:inputType="textPassword"
            android:padding="2dp"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/confPassEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/reset_confirm_password"
            android:inputType="textPassword"
            android:padding="2dp"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/reset_submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>